--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "concurrently \"vite\" \"node server.js\"",
     "build": "tsc && vite build",
+    "vercel-build": "npm run build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -40,6 +41,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@types/leaflet": "^1.9.16",
+    "@vercel/postgres": "^0.10.0",
     "axios": "^1.6.7",
     "basic-auth": "^2.0.1",
     "class-variance-authority": "^0.7.0",
@@ -47,15 +49,18 @@
     "cmdk": "^1.0.0",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.3.0",
     "express": "^4.18.2",
     "input-otp": "^1.2.4",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.446.0",
     "next-themes": "^0.3.0",
+    "pg": "^8.13.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.0",
     "react-leaflet": "^4.2.1",
     "react-resizable-panels": "^2.1.3",
