--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "vercel-build": "npm run build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "check-db": "node check-db.js"
+    "check-db": "node check-db.js",
+    "check-db-full": "node check-db-comprehensive.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
