--- a/vercel.json
+++ b/vercel.json
@@ -16,20 +16,9 @@
       }
     }
   ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "server.js"
-    },
-    {
-      "src": "/(.*\\.(js|css|svg|jpg|jpeg|png|gif|ico|json))",
-      "headers": { "cache-control": "public, max-age=31536000, immutable" },
-      "dest": "/dist/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/dist/index.html"
-    }
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "server.js" },
+    { "source": "/(.*)", "destination": "/dist/index.html" }
   ],
   "headers": [
     {
@@ -39,6 +28,12 @@
         { "key": "Access-Control-Allow-Origin", "value": "*" },
         { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
         { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization" }
+      ]
+    },
+    {
+      "source": "/(.*\\.(js|css|svg|jpg|jpeg|png|gif|ico|json))",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
       ]
     }
   ]
