Updated stack to neon

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
-# Admin credentials (replace with your own values)
+# Admin credentials
 VITE_ADMIN_EMAIL=admin@example.com
-VITE_ADMIN_PASSWORD=changeme 
+VITE_ADMIN_PASSWORD=password123
+
+# For development, we use SQLite by default
+# If you want to test with Neon in development, uncomment and set these:
+# POSTGRES_URL=postgres://user:password@db.neon.tech/neondb
+# NODE_ENV=production
+
+# Admin API credentials
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=safestreet 
