--- a/.gitignore
+++ b/.gitignore
@@ -41,8 +41,8 @@ coverage
 .env.local
 .env.development.local
 .env.test.local
-.env.production.local
 .env.production
+.env.production.local
 
 # TypeScript
 *.tsbuildinfo
@@ -66,4 +66,9 @@ coverage
 
 # Misc
 .DS_Store
-Thumbs.db 
+Thumbs.db
+
+# Database
+*.sqlite
+*.sqlite3
+*.db 
