--- a/vercel.json
+++ b/vercel.json
@@ -20,12 +20,37 @@
     },
     {
       "src": "/(.*\\.(js|css|svg|jpg|jpeg|png|gif|ico|json))",
-      "headers": { "cache-control": "public, max-age=31536000, immutable" },
+      "headers": { 
+        "cache-control": "public, max-age=31536000, immutable",
+        "X-Content-Type-Options": "nosniff",
+        "X-Frame-Options": "DENY",
+        "X-XSS-Protection": "1; mode=block"
+      },
       "dest": "/dist/$1"
     },
     {
       "src": "/(.*)",
       "dest": "/dist/index.html"
+    }
+  ],
+  "regions": ["cdg1"],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-XSS-Protection",
+          "value": "1; mode=block"
+        }
+      ]
     }
   ]
 } 
