--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
-# Admin credentials (replace with your own values)
-VITE_ADMIN_EMAIL=admin@example.com
-VITE_ADMIN_PASSWORD=changeme 
+# Database
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/safestreet"
+
+# Admin credentials
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=safestreet
+
+# Next.js public environment variables
+NEXT_PUBLIC_ADMIN_USERNAME=admin
+NEXT_PUBLIC_ADMIN_PASSWORD=safestreet 
