--- a/package.json
+++ b/package.json
@@ -2,18 +2,15 @@
   "name": "safe-street-porto",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "concurrently \"vite\" \"node server.js\"",
-    "build": "tsc && vite build",
-    "vercel-build": "npm run build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "deploy": "node deploy-vercel.js",
-    "migrate": "node migrate-data.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@prisma/client": "^6.4.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -49,17 +46,17 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.3.0",
-    "express": "^4.18.2",
     "helmet": "^8.0.0",
     "input-otp": "^1.2.4",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.446.0",
+    "next": "^14.1.4",
     "next-themes": "^0.3.0",
     "pg": "^8.13.3",
+    "prisma": "^6.4.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -67,7 +64,6 @@
     "react-hook-form": "^7.53.0",
     "react-leaflet": "^4.2.1",
     "react-resizable-panels": "^2.1.3",
-    "react-router-dom": "^7.2.0",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "sqlite": "^5.1.1",
@@ -81,23 +77,17 @@
   "devDependencies": {
     "@eslint/js": "^9.11.1",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
     "@types/node": "^22.7.3",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^9.0.8",
-    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
-    "concurrently": "^8.2.2",
-    "eslint": "^9.11.1",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.1.4",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8"
+    "typescript": "^5.5.3"
   }
 }
