Prepped for deployment

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,14 @@ ADMIN_PASSWORD=safestreet
 
 # Next.js public environment variables
 NEXT_PUBLIC_ADMIN_USERNAME=admin
-NEXT_PUBLIC_ADMIN_PASSWORD=safestreet 
+NEXT_PUBLIC_ADMIN_PASSWORD=safestreet
+
+# Production settings
+NODE_ENV=production
+
+# Vercel specific settings (if needed)
+# VERCEL_URL=your-project.vercel.app
+# VERCEL_ENV=production
+
+# Custom domain
+NEXT_PUBLIC_SITE_URL=https://www.ruasegura.pt 
