--- a/vercel.json
+++ b/vercel.json
@@ -15,8 +15,36 @@
         {
           "key": "X-XSS-Protection",
           "value": "1; mode=block"
+        },
+        {
+          "key": "X-DNS-Prefetch-Control",
+          "value": "on"
+        },
+        {
+          "key": "Strict-Transport-Security",
+          "value": "max-age=63072000; includeSubDomains; preload"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "strict-origin-when-cross-origin"
         }
       ]
     }
-  ]
+  ],
+  "redirects": [
+    {
+      "source": "/",
+      "has": [
+        {
+          "type": "host",
+          "value": "ruasegura.pt"
+        }
+      ],
+      "destination": "https://www.ruasegura.pt/",
+      "permanent": true
+    }
+  ],
+  "github": {
+    "silent": true
+  }
 } 
