--- a/vercel.json
+++ b/vercel.json
@@ -46,5 +46,13 @@
   ],
   "github": {
     "silent": true
+  },
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
+  "outputDirectory": ".next",
+  "postbuild": {
+    "commands": [
+      "npx prisma migrate deploy"
+    ]
   }
 } 
