--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,20 @@
-# Database
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/safestreet"
+# Authentication
+ADMIN_USERNAME="admin"
+ADMIN_PASSWORD="safestreet"
 
-# Admin credentials
-ADMIN_USERNAME=admin
-ADMIN_PASSWORD=safestreet
+# Database (PlanetScale)
+DATABASE_URL="mysql://username:password@aws.connect.psdb.cloud/database-name?sslaccept=strict"
+
+# Supabase (if still needed)
+NEXT_PUBLIC_SUPABASE_URL="https://your-project.supabase.co"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="your-anon-key"
+SUPABASE_URL="https://your-project.supabase.co"
+SUPABASE_ANON_KEY="your-anon-key"
+SUPABASE_SERVICE_ROLE_KEY="your-service-role-key"
+SUPABASE_JWT_SECRET="your-jwt-secret"
+
+# Next.js
+NEXT_PUBLIC_APP_URL="https://www.ruasegura.pt"
 
 # Next.js public environment variables
 NEXT_PUBLIC_ADMIN_USERNAME=admin
