--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
-    "vercel-build": "node scripts/vercel-build.js",
+    "build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start",
     "lint": "next lint",
     "seed": "npx ts-node prisma/seed.ts",
     "postinstall": "prisma generate",
-    "migrate:deploy": "prisma migrate deploy",
-    "migrate": "node scripts/migrate.js",
-    "deploy:db": "node scripts/deploy-db.js"
+    "setup:db": "node scripts/setup-db.js",
+    "migrate:dev": "node scripts/nile-migrate.js",
+    "migrate:deploy": "node scripts/nile-deploy.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
