--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && prisma migrate deploy && next build",
+    "build": "prisma generate && prisma db push && next build",
     "start": "next start",
     "lint": "next lint",
     "seed": "npx ts-node prisma/seed.ts",
     "postinstall": "prisma generate",
     "setup:db": "node scripts/setup-db.js",
+    "setup:nile": "node scripts/nile-setup.js",
     "migrate:dev": "node scripts/nile-migrate.js",
-    "migrate:deploy": "node scripts/nile-deploy.js"
+    "migrate:deploy": "node scripts/nile-deploy.js",
+    "test:connection": "node scripts/test-nile-connection.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
