--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "node scripts/add-tenant.js && prisma generate && prisma db push --force-reset && next build",
+    "build": "node scripts/add-tenant.js && prisma generate && node scripts/prisma-push.js && next build",
     "start": "next start",
     "lint": "next lint",
     "seed": "npx ts-node prisma/seed.ts",
