--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "seed": "npx ts-node prisma/seed.ts",
     "postinstall": "prisma generate",
     "test:connection": "node scripts/test-nile-connection.js",
-    "pre-deploy": "node scripts/pre-deploy.js"
+    "pre-deploy": "node scripts/pre-deploy.js",
+    "generate-og-placeholders": "node scripts/generate-og-images.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -44,6 +45,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@types/leaflet": "^1.9.16",
+    "@vercel/og": "^0.6.2",
     "@vercel/postgres": "^0.10.0",
     "axios": "^1.6.7",
     "basic-auth": "^2.0.1",
