--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@types/leaflet": "^1.9.16",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/og": "^0.6.2",
     "@vercel/postgres": "^0.10.0",
     "axios": "^1.6.7",
