--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/og": "^0.6.2",
     "@vercel/postgres": "^0.10.0",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.6.7",
     "basic-auth": "^2.0.1",
     "class-variance-authority": "^0.7.0",
